--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   firebase_messaging: ^7.0.3
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
